# todo_tui

./: .envrc  .gitignore  Cargo.toml  README.md  default_config.toml  shell.nix  todo.md
src/: config.rs  main.rs  tasks.rs  tui.rs
