[package]
name = "todo_tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.30.1"
crossterm = "0.29"
tui-input = "0.15.3"
serde = { version = "1.0.228", default-features = false, features = ["derive", "alloc"] }
toml = "1.1.2"
keybinds = { version = "0.2.0", features = ["crossterm", "serde"] }

[[bin]]
name = "todo_tui"
path = "src/main.rs"
